# swagger/v1/swagger.yaml
@@ -92,3 +92,37 @@ paths:
                   type: string
               required:
               - name
+  "/api/v1/chat_applications/{chat_application_token}/chats":
+    get:
+      summary: Retrieves all chats belonging to a specific application
+      tags:
+      - Chats
+      parameters:
+      - name: chat_application_token
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Get chats
+          content:
+            application/json:
+              example:
+              - number: 1
+              - number: 2
+    post:
+      summary: Creates a new chat
+      tags:
+      - Chats
+      parameters:
+      - name: chat_application_token
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '201':
+          description: Successfully created
+        '400':
+          description: Bad Request
